--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Projects</h1>
-<p href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</p>
+<a href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</a>
 </body>
 </html>
