Add link to jigsaw puzzle project

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <body>
 <h4>Projects</h4>
 <a href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</a>
+<a href="http://ananddevan.github.io/JigsawPuzzle/">Jigsaw puzzle</a>
 </body>
 </html>
