--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h4>Projects</h4>
-<a href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</a>
+<a href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</a><br/>
 <a href="http://ananddevan.github.io/JigsawPuzzle/">Jigsaw puzzle</a>
 </body>
 </html>
