Add image based links to home page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h4>Projects</h4>
-<a href="http://ananddevan.github.io/DroppingBall/">Dropping ball game.</a><br/>
-<a href="http://ananddevan.github.io/JigsawPuzzle/">Jigsaw puzzle</a>
+<h4>Tile based jigsaw puzzle:</h4>
+<a href="http://ananddevan.github.io/JigsawPuzzle/"> <img src="assets/images/jigsawPuzzle.jpg" alt="Tiled jigsaw puzzle"></a>
+<br/>
+
+<hr/>
+<a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.png" alt="Dropping ball game"></a><br/>
+
 </body>
 </html>
