Add title for ball projectile game

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <body>
 <h4>Tile based jigsaw puzzle:</h4>
 <a href="http://ananddevan.github.io/JigsawPuzzle/"> <img src="assets/images/jigsawPuzzle.jpg" alt="Tiled jigsaw puzzle"></a>
-<br/>
-
 <hr/>
+<h4>Ball projectile game</h4>
 <a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.png" alt="Dropping ball game"></a><br/>
 
 </body>
