--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     margin: 0 1em 1em 0em;
     float: left;
   }
-  .div div{
+  .div{
   	margin-left: auto;
     margin-right: auto;
   }
@@ -37,15 +37,13 @@ max-width: 800px;
 		<h4>Ball projectile game</h4>
 		<a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.jpg" alt="Dropping ball game"></a><br/>
 		<p>Play by dropping the ball from a height to hit target<br>
-			WebGL may not work on ipad, andriod phones (Play on a desktop with chrome)
-		Libraries, technology: 
+			WebGL will not work on ipad, some andriod phones (desktop, chrome should work)
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
-		+ <em>webgl (three.js), simple gaming engine, javascript</em> <br>
-		+ use three.js library to create game graphics
+		+ <em>webgl (three.js), custom gaming engine, javascript</em> <br>
+		+ use three.js library to create game graphics <br>
 		+ developed a custom game engine to move ball accounting for sliding, contact, gravity<br>
 		+ use html audio to play sound for ball impact
-
 		</p>
 	</div>
 
