--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <style>
-   .div img {
+   .center img {
     margin: 0 1em 1em 0em;
     float: left;
   }
-  .div{
+  .center{
   	margin-left: auto;
     margin-right: auto;
   }
@@ -17,9 +17,9 @@ font: 16px Arial, sans-serif;
 max-width: 800px;
 }
 </style>
-<body>
+<body class="center">
 <h4>Tile based jigsaw puzzle</h4>
-	<div class="div clearfix">
+	<div class="center clearfix">
 		<a href="http://ananddevan.github.io/JigsawPuzzle/"> <img src="assets/images/jigsawPuzzle.jpg" alt="Tiled jigsaw puzzle"></a>
 		<p>Play game by rearranging the tiles to form the original image. You can even load your own image to create a custom puzzle.
 		<br/><br/><br>
@@ -33,7 +33,7 @@ max-width: 800px;
 		</p>
 	</div>
 	<hr/>
-	<div class="div">
+	<div class="center clearfix">
 		<h4>Ball projectile game</h4>
 		<a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.jpg" alt="Dropping ball game"></a><br/>
 		<p>Play by dropping the ball from a height to hit target<br>
@@ -46,6 +46,5 @@ max-width: 800px;
 		+ use html audio to play sound for ball impact
 		</p>
 	</div>
-
 </body>
 </html>
