Add video for dropping ball

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		+ capture mouse, touch events to drag and place tiles <br>
 		+ add html audio to confirm tile placement <br>
 		+ use html input to load user images <br><br>
-		<span>Demo: <a href="http://youtu.be/rpQZX4gtHyQ"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
+		<span>Recorded demo: <a href="http://youtu.be/rpQZX4gtHyQ"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
 		</p>
 	</div>
 	<div class="center clearfix">
@@ -51,7 +51,8 @@
 		+ <em>webgl (three.js), custom gaming engine, JavaScript</em> <br>
 		+ use three.js library to create game graphics <br>
 		+ developed a custom game engine to move ball accounting for sliding, contact, gravity<br>
-		+ use html audio to play sound for ball impact<br/>
+		+ use html audio to play sound for ball impact<br/><br/>
+		<span>Recorded demo: <a href="http://youtu.be/Jd-bKzGUCbg"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
 		</p>
 	</div>
 </body>
