add a page for jigsaw puzzle

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 		+ capture mouse, touch events to drag and place tiles <br>
 		+ add html audio to confirm tile placement <br>
 		+ use html input to load user images <br><br>
-		<span>Recorded demo: <a href="http://youtu.be/rpQZX4gtHyQ"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
+		<span>Recorded demo: <a href="http://youtu.be/rpQZX4gtHyQ"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span><br>
+		<span> Software project details <a href = "jigsawPuzzle.html">here</a>
 		</p>
 	</div>
 	<div class="center clearfix">
