add a section for balloon burst game

--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
 		</p>
 	</div>
 	<div class="center clearfix">
+		<h4 class="projectTitle">Balloon Burst</h4>
+		<a href="http://ananddevan.github.io/BalloonBurst/"><img src="assets/images/ballonBurst.jpg" alt="Balloon burst game" class="gamePicture"></a><br/>
+		<p>Play game by touching (clicking on) balloon to burst<br>
+		<br/><br/><br>
+		<b>Libraries, technology</b>: <br>
+		+ <em> box2d, HTML5 canvas, JavaScript</em> <br>
+		+ Used only canvas rendering to draw balloon <br>
+		+ Used box2d physics engine for simulation<br>
+		+ use html audio to play sound for bursting balloon<br/><br/>
+		</p>
+	</div>
+	<div class="center clearfix">
 		<h4 class="projectTitle">Ball projectile game</h4>
 		<a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.jpg" alt="Dropping ball game" class="gamePicture"></a><br/>
 		<p>Play by dropping the ball from a height to hit target<br>
