--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<p>Play game by rearranging the tiles to form the original image. You can even load your own image to create a custom puzzle.
 		<br/><br/><br>
 		<span><b>Libraries, technology</b>:</span> <br>
-		+ <em>HTML5 canvas, audio, JavaScript</em> <br>
+		<font color="orange"> <b> HTML5 canvas, audio, JavaScript </b> </font> <br><br>
 		+ using html canvas drawImage to create tiles <br>
 		+ radomize tile order to create puzzle <br>
 		+ capture mouse, touch events to drag and place tiles <br>
@@ -48,9 +48,9 @@
 		<p>Play game by touching (clicking on) balloon to burst<br>
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
-		+ <em> box2d, HTML5 canvas, JavaScript</em> <br>
+		<font color="orange"> <b> box2d, HTML5 canvas, JavaScript </b> </font> <br> <br>
 		+ Used only canvas rendering to draw balloon <br>
-		+ Used box2d physics engine for simulation<br>
+		+ Used box2d physics engine for simulation, detecting and handling collisions <br>
 		+ use html audio to play sound for bursting balloon<br/><br/>
 		</p>
 	</div>
@@ -61,7 +61,7 @@
 			WebGL will not work on ipad, some andriod phones (desktop, chrome should work)
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
-		+ <em>webgl (three.js), custom gaming engine, JavaScript</em> <br>
+		<font color="orange"> <b> webGL (three.js), custom physics engine, JavaScript </b> </font><br><br>
 		+ use three.js library to create game graphics <br>
 		+ developed a custom game engine to move ball accounting for sliding, contact, gravity<br>
 		+ use html audio to play sound for ball impact<br/><br/>
