Added title to page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		float: right;
 	}
 </style>
+<title>Anand Devan (JavaScript projects)</title>
 <body class="center">
 <h4 class="projectTitle">Tile based jigsaw puzzle</h4>
 	<div class="center clearfix">
