Add image for picture and sound

--- a/index.html
+++ b/index.html
@@ -70,14 +70,18 @@
 		</p>
 	</div>
 	<div class="center clearfix">
-		<h4 class="projectTitle">Picture and Sound</h4>
-		<a href="http://ananddevan.github.io/PictureAndSounds/">Picture and Sound</a><br/>
-		<p>Play by touching objects that drop down
+		<h4 class="projectTitle">Picture and sound game</h4>
+		<a href="http://ananddevan.github.io/PictureAndSounds/"><img src="assets/images/pictureAndSound.jpg" alt="Dropping ball game" class="gamePicture"></a><br/>
+		<p>Click or touch dropping objects to play sound<br>
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
 		<font color="orange"> <b> JavaScript </b> </font><br><br>
-		+ use html audio to play sound<br/><br/>
+		+ use html audio to play sound for ball impact<br/><br/>
+		<!--
+		<span>Recorded demo: <a href="http://youtu.be/Jd-bKzGUCbg"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
+		-->
 		</p>
+
 	</div>	
 </body>
 
