Add video for picture and sound game

--- a/index.html
+++ b/index.html
@@ -76,10 +76,8 @@
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
 		<font color="orange"> <b> JavaScript </b> </font><br><br>
-		+ use html audio to play sound for ball impact<br/><br/>
-		<!--
-		<span>Recorded demo: <a href="http://youtu.be/Jd-bKzGUCbg"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
-		-->
+		+ use html audio to play sound for ball impact<br/><br/>		
+		<span>Recorded demo: <a href="https://youtu.be/-LTdD0cUFlI"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
 		</p>
 
 	</div>	
