Shuffle projects around, add video for PictureAndSound

--- a/index.html
+++ b/index.html
@@ -44,17 +44,20 @@
 		</p>
 	</div>
 	<div class="center clearfix">
-		<h4 class="projectTitle">Balloon Burst</h4>
-		<a href="http://ananddevan.github.io/BalloonBurst/"><img src="assets/images/ballonBurst.jpg" alt="Balloon burst game" class="gamePicture"></a><br/>
-		<p>Play game by touching (clicking on) balloon to burst<br>
+		<h4 class="projectTitle">Picture and sound game</h4>
+		<a href="http://ananddevan.github.io/PictureAndSounds/"><img src="assets/images/pictureAndSounds.jpg" alt="Dropping ball game" class="gamePicture"></a><br/>
+		<p>Click (or touch) a dropping object to play sound!<br>
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
-		<font color="orange"> <b> box2d, HTML5 canvas, JavaScript </b> </font> <br> <br>
-		+ Used only canvas rendering to draw balloon <br>
-		+ Used box2d physics engine for simulation, detecting and handling collisions <br>
-		+ use html audio to play sound for bursting balloon<br/><br/>
+		<font color="orange"> <b> JavaScript, RequireJS, Box2D, HTML5 audio </b> </font><br><br>
+		+ use Box2D to simulate dropping of the object with gravity and impact<br>
+		+ create a ground with arcs so that impact is interesting<br>
+		+ use html audio to play sound for ball impact<br/>
+		+ use gimp to edit image and circular image with transparency<br/><br/>
+		<span>Recorded demo: <a href="https://youtu.be/-LTdD0cUFlI"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
 		</p>
-	</div>
+
+	</div>	
 	<div class="center clearfix">
 		<h4 class="projectTitle">Ball projectile game</h4>
 		<a href="http://ananddevan.github.io/DroppingBall/"><img src="assets/images/droppingBall.jpg" alt="Dropping ball game" class="gamePicture"></a><br/>
@@ -70,17 +73,17 @@
 		</p>
 	</div>
 	<div class="center clearfix">
-		<h4 class="projectTitle">Picture and sound game</h4>
-		<a href="http://ananddevan.github.io/PictureAndSounds/"><img src="assets/images/pictureAndSounds.jpg" alt="Dropping ball game" class="gamePicture"></a><br/>
-		<p>Click or touch dropping objects to play sound<br>
+		<h4 class="projectTitle">Balloon Burst</h4>
+		<a href="http://ananddevan.github.io/BalloonBurst/"><img src="assets/images/ballonBurst.jpg" alt="Balloon burst game" class="gamePicture"></a><br/>
+		<p>Play game by touching (or clicking on) balloon to burst<br>
 		<br/><br/><br>
 		<b>Libraries, technology</b>: <br>
-		<font color="orange"> <b> JavaScript </b> </font><br><br>
-		+ use html audio to play sound for ball impact<br/><br/>		
-		<span>Recorded demo: <a href="https://youtu.be/-LTdD0cUFlI"> <img src='assets/images/YouTubeIcon.png' style=" vertical-align: middle;"></a></span>
+		<font color="orange"> <b> Box2D, HTML5 canvas, JavaScript </b> </font> <br> <br>
+		+ Used only canvas rendering to draw balloon <br>
+		+ Used Box2D physics engine for simulation, detecting and handling collisions <br>
+		+ use html audio to play sound for bursting balloon<br/><br/>
 		</p>
-
-	</div>	
+	</div>
 </body>
 
 <script>
